welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:2: error: type pink is not a member of object java.awt.Color
    def hunt(c:Color.pink) {
                     ^