welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
    def hunt(c:Color.pink) {

var couleuravant: Boolean = true;
if(!estFaceMur){
avance()

if(getCouleurSol() == Color.pink){

	couleuravant=true
}else{
	couleuravant=false


    // Write your code here
}   
recule()

return couleuravant 
}
else{
	return false;
}


        // Write your code here
    }
   
    // here comes your isFacingTrail method   

